<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="GVL_Data" Id="{d7e35624-9198-41ce-ad9c-5c19e853e865}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL PERSISTENT
	stRecipe:					ST_Recipe;// 配方
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>