<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="MAIN" Id="{9f111226-449a-4e9b-8be2-b4171f48ff56}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[GVL_Data.stRecipe.eMachineType:=E_MachineType.RH069;
P_System();//系统程序
P_Alarm();// 报警程序
P_Device();// 外围装置
P_Station();// 工站流程

]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="36" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="16" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="28" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>